styling/font fixes/improvements; X-UA-Compatible & dropped scrollbars in tips
Among other benefits, this should make tips.html display more
uniformly across browsers, and is thus an important step leaing up
to enabling WebView2/Edge with a WebBrowser/IE fallback.

However:

(1) I'm not sure it actually does display more uniformly. The
    <kbd> elements format taller than the surrounding heights in
    Firefox and Chrome, which is a problem because it scrunches
    some table rows up against each other while spacing others out.

(2) I'm not sure I really want to use WebView2/Edge for the tips.
    WebBrowser/IE isn't going anywhere (too many programs use it
    for support to be dropped anytime soon) and, unlike the help,
    the tips seem currently to render just as I want them to.
    The superior usability of Edge is also not an issue for the
    tips, which don't contain hyperlinks and are conceptually not
    a web page, and continuing to use WebBrowser keeps the same
    mouseover appearance (for title attributes) as tooltips in the
    surrounding UI, which is desirable.

--- a/help.css
+++ b/help.css
@@ -102,7 +102,11 @@ code {
 }
 
 kbd, .command {
-  background-color: #eef;
+  background-color: #eeeeff;
+}
+
+kbd:hover {
+  background-color: #e2e2ff;
 }
 
 .box {
