--- a/shared.css
+++ b/shared.css
@@ -2,13 +2,19 @@
  * but simplified and also modified so elements take up a little less space.
  */
 kbd {
-  background-color: #eee;
+  background-color: #eeeeee;
   border: 1px solid #b4b4b4;
-  border-radius: 1px;
+  border-radius: 3px;
   color: #333;
   display: inline-block;
+  font-family: 'Consolas', 'Source Code Pro', monospace;
   font-variant: small-caps;
   font-weight: 700;
+  letter-spacing: 0.07em;
   margin: 1px;
   padding: 1px 2px;
+}
+
+kbd:hover {
+  background-color: #e2e2e2;
 }
